# motus

./: .gitignore  LICENSE  README.md  SECURITY_AUDIT_REPORT.md  SESSION_SUMMARY.md  VUE_MIGRATION_SUMMARY.md  WEEK_3_PLAN.md  build_frontend.py  dev-vue.py  package-lock.json  package.json  pyproject.toml  remote_templates.conf.example  requirements.txt  run.py  tour-diagnosis.md
backend/: app.py  auth.py  config.py  models.py
backend/api/: files.py  jobs.py  remotes.py  stream.py  upload.py
backend/rclone/: config_state_machine.py  custom_remote.py  job_queue.py  oauth.py  rclone_config.py  wrapper.py
frontend/: dev-server.js  index.html  package-lock.json  package.json  vite.config.js
frontend-dist/: index.html
frontend-dist/assets/: index-B65ZM6kH.js  index-BH58eqOi.css  index-BIfE_Cfi.css  index-BUOkfnls.css  index-CSFFhYuz.css  index-CSlvNgaD.css  index-CVtcDaFO.css  index-CzQexASv.js  index-DGsbm_xU.css  index-DarPw2yt.js  index-DuDrCFkt.js  index-LGV-1q4b.js  index-cRNHy-uw.js  index-mVZnnnFD.js
frontend-dist/css/: header.css  modals.css
frontend-vue/: README.md  dev-server.js  index.html  package-lock.json  package.json  vite.config.js
frontend-vue/public/: expert-mode.css
frontend-vue/public/css/: easy-mode-layout.css
frontend-vue/src/: App.vue
frontend-vue/src/assets/styles/: main.css
frontend-vue/src/components/: AppHeader.vue  ContextMenu.vue  FilePane.vue  JobPanel.vue
frontend-vue/src/components/modals/: BaseModal.vue  CreateAliasModal.vue  CreateFolderModal.vue  CustomRemoteMethodModal.vue  CustomRemoteWizardModal.vue  DeleteConfirmModal.vue  DragDropConfirmModal.vue  InterruptedJobsModal.vue  JobLogModal.vue  ManageRemotesModal.vue  OAuthInteractiveModal.vue  RenameModal.vue
frontend-vue/src/composables/: useFileOperations.js
frontend-vue/src/services/: preferences.js
frontend-vue/src/stores/: app.js
frontend-vue/src/views/: EasyMode.vue  ExpertMode.vue
frontend/css/: base.css  context-menu.css
frontend/js/: app.js  config.js
frontend/js/actions/: dialogActions.jsx
frontend/js/components/: Navbar.jsx
frontend/js/lib/: api.js  modal-manager.js  sse.js
frontend/js/modules/: expert-mode.js  file-browser.js  file-operations.js  job-manager.js  navigation-manager.js  oauth-manager.js  remote-manager.js  ui-manager.js  upload-manager.js
frontend/js/reducers/: dialogReducer.jsx
frontend/js/utils/: helpers.js  preferences.js  template-loader.js
frontend/js/views/App/CommandBar/: CommandBar.jsx
frontend/js/views/Dialogs/: Dialogs.jsx  ManageRemotesDialog.jsx
frontend/public/css/: base.css  easy-mode-layout.css  expert-mode.css  header.css  jobs.css  modals.css  tour.css
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: buttons.css  main.css  variables.css
frontend/src/components/: AppHeader.vue  ContextMenu.vue  FilePane.vue  JobPanel.vue
frontend/src/components/modals/: BaseKeyboardShortcutsModal.vue  BaseModal.vue  CompletedJobsModal.vue  CompletedJobsShortcutsModal.vue  ConfirmModal.vue  CopyCollisionModal.vue  CreateAliasModal.vue  CreateFolderModal.vue  CustomRemoteMethodModal.vue  CustomRemoteWizardModal.vue  DeleteConfirmModal.vue  DownloadConfirmModal.vue  DownloadPreparingModal.vue  DragDropConfirmModal.vue  InterruptedJobsModal.vue  JobLogModal.vue  KeyboardShortcutsModal.vue  MainKeyboardShortcutsModal.vue  ManageRemotesModal.vue  ManageRemotesShortcutsModal.vue  ModalTable.vue  OAuthInteractiveModal.vue  RenameModal.vue  UploadProgressModal.vue
frontend/src/composables/: useClipboard.js  useFileOperations.js  useUpload.js  useWizard.js
frontend/src/data/: shortcutSections.js
frontend/src/router/: index.js
frontend/src/services/: api.js  guidedTour.js  helpers.js  preferences.js
frontend/src/stores/: app.js  modalStack.js
frontend/src/utils/: remoteNameValidation.js  remoteSorting.js
frontend/src/views/: EasyMode.vue  ExpertMode.vue
frontend/templates/: context-menu.html  easy-mode.html  expert-mode.html
frontend/templates/modals/: create-folder-modal.html  delete-confirm-modal.html  drag-drop-confirm-modal.html  edit-remote-config-modal.html  interrupted-jobs-modal.html  manage-remotes-modal.html  oauth-interactive-modal.html  rename-modal.html  upload-progress-modal.html  view-remote-config-modal.html
frontend/webpack/: webpack.common.js
motus/: __init__.py  cli.py
motuz/: __init__.py  cli.py
src/motus/: cli.py  run.py
src/motus/backend/: app.py  auth.py  config.py  models.py
src/motus/backend/api/: files.py  jobs.py  remotes.py  stream.py
src/motus/backend/rclone/: exceptions.py  oauth.py  rclone_config.py  wrapper.py
