[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motus"
version = "1.0.0"
description = "A simplified, single-user web application for file transfers using rclone with Vue.js interface"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["rclone", "file-transfer", "web-interface", "vue", "flask"]
authors = [
    { name = "Motus Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "Flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "hatch>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/calvofl0/motus"
Documentation = "https://github.com/calvofl0/motus#readme"
Issues = "https://github.com/calvofl0/motus/issues"
Source = "https://github.com/calvofl0/motus"

[project.scripts]
motus = "motus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend", "motus"]

[tool.hatch.build.targets.wheel.force-include]
"run.py" = "run.py"
"frontend-dist" = "frontend-dist"
"dev-vue.py" = "dev-vue.py"

[tool.hatch.build.hooks.custom]
# Build Vue frontend before packaging
# Note: Requires Node.js and npm to be installed
path = "build_frontend.py"

[tool.hatch.build.targets.sdist]
include = [
    "/backend/**/*.py",
    "/frontend/**/*",
    "/frontend-dist/**/*",
    "/motus/**/*.py",
    "/run.py",
    "/dev-vue.py",
    "/README.md",
    "/LICENSE",
    "/requirements.txt",
    "/remote_templates.conf.example",
    "/SECURITY_AUDIT_REPORT.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
